# LoLBox

./: .gitignore  README.md  index.html  init_env.bat  package-lock.json  package.json
src/: DefaultErrorPage.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  MyRecordDll.lib  build.rs  clipboard.txt  config.txt  tauri.conf.json
src-tauri/src/: by_lcu.rs  ffi.rs  main.rs
src-tauri/src/lcu/: invoke_lcu.rs  process_info.rs  query_match.rs  request.rs
src/assets/champList/: index.ts
src/interface/: MatchDetail.d.ts  MatchInfo.d.ts  SummonerInfo.d.ts
src/utils/: getMatchDetail.ts  getMatchInfo.ts  getSumInfo.ts  tool.ts
src/view/match/: RHeader.tsx  RMatchHistory.tsx  RNotification.tsx  RSummonerInfo.tsx  index.tsx
src/view/match/components/: MatchDetail.tsx  MatchDetailHeader.tsx  MatchDetailItem.tsx  MatchList.tsx  MatchSumDetail.tsx
src/view/match/css/: match.css  sumInfo.css
