[package]
name = "record"
version = "0.0.1"
description = "query LOL matchHistory"
authors = ["Java_S"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.0", features = [] }
embed-resource = "2.1"

[dependencies]
tauri = { version = "1.2", features = [ "api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.28.0"
base64 = "0.21.0"
lazy_static = "1.4.0"
chrono = "0.4.24"
log = "0.4"
env_logger = "0.9"
encoding = "0.2"
clipboard = "0.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.

[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"
